--- a/apps/ledger-live-desktop/static/i18n/zh/app.json
+++ b/apps/ledger-live-desktop/static/i18n/zh/app.json
@@ -608,13 +608,13 @@
   },
   "stake" : {
     "noFundsModal" : {
-      "title" : "Buy, swap or receive",
-      "text" : "You do not have enough {{coin}} available to stake",
-      "description" : "Not enough funds? Don’t worry, you can securely buy, swap or receive crypto directly in Ledger Live.",
+      "title" : "买入、互换或接收",
+      "text" : "您没有足够的 {{coin}} 可供权益质押",
+      "description" : "资金不足？别担心，您可以直接在 Ledger Live 中买入、互换或接收加密货币。",
       "options" : {
         "buy" : {
           "title" : "买入",
-          "body" : "Buy with trusted  providers"
+          "body" : "通过值得信赖的服务提供商买入"
         },
         "swap" : {
           "title" : "互换",
@@ -623,7 +623,7 @@
         },
         "receive" : {
           "title" : "接收",
-          "body" : "Receive crypto in your wallet"
+          "body" : "在您的钱包中接收加密货币"
         }
       }
     }
@@ -819,12 +819,44 @@
       "redelegation" : {
         "title" : "您知道吗……",
         "description" : "Ledger 验证器权益质押的佣金低于您目前使用的验证器。",
-        "cta" : "使用 Ledger 重新委托"
+        "cta" : "使用 Ledger 重新委托",
+        "linkText" : "什么是重新委托，需要多长时间？",
+        "solana" : {
+          "title" : "您知道吗？",
+          "description" : "Ledger 提供的佣金率低于您的验证者。此过程最多可能需要 4 天。"
+        },
+        "near" : {
+          "title" : "您知道吗？",
+          "description" : "Ledger offers a lower commission rate than your validator. This process can take up to 65 hours."
+        },
+        "elrond" : {
+          "title" : "您知道吗？",
+          "description" : "Ledger offers a lower commission rate than your validator. This process can take up to 10 days."
+        }
       },
       "delegation" : {
         "title" : "您知道吗……",
         "description" : "使用 Ledger 验证器权益质押 {{asset}}，仅需 {{commission}}% 的佣金。",
-        "cta" : "使用 Ledger 进行权益质押"
+        "cta" : "使用 Ledger 进行权益质押",
+        "linkText" : "了解更多",
+        "ethereum" : {
+          "lido" : {
+            "title" : "您知道吗……",
+            "description" : "使用 Lido 权益质押您的以太币，每天赚取奖励。无锁定期。无最低存款限制。",
+            "cta" : "使用 Lido 权益质押"
+          },
+          "kiln" : {
+            "title" : "请不要仅仅长期持有。增长您的以太币",
+            "description" : "有超过 32 个以太币？不妨使用 Kiln 安全权益质押您的以太币来赚取被动奖励。",
+            "cta" : "使用 Kiln 权益质押"
+          }
+        },
+        "near" : {
+          "description" : "Stake your NEAR with Ledger by Figment validator. Your coins stay yours, backed by Ledger’s uncompromising security."
+        },
+        "elrond" : {
+          "description" : "Stake your ELROND with Ledger by Figment validator. Your coins stay yours, backed by Ledger’s uncompromising security."
+        }
       }
     }
   },
@@ -1399,7 +1431,7 @@
         "label" : "热门"
       },
       "earn" : {
-        "title" : "赚取",
+        "title" : "权益质押",
         "description" : "通过 Ledger 增长加密资产"
       }
     }
@@ -3761,6 +3793,9 @@
       "catalogRampServerDesc" : "在多个交易提供商之间切换",
       "enablePlatformDevTools" : "启用平台开发工具",
       "enablePlatformDevToolsDesc" : "启用打开平台应用程序开发工具的窗口",
+      "customLockScreen" : "自定义锁屏素材资源",
+      "customLockScreenDesc" : "调试自定义锁屏图形素材资源",
+      "customLockScreenCTA" : "启动",
       "featureFlagsTitle" : "Ledger Live 中使用的已定义功能标志",
       "featureFlagsDesc" : "如果重新启动应用程序，将重置覆盖的值。仅接受有效的 JSON 字符串。",
       "featureFlagsEdit" : "编辑",
@@ -3776,7 +3811,9 @@
       "runLocalAppDeleteButton" : "删除",
       "runLocalAppOpenButton" : "打开",
       "enableLearnStagingUrl" : "学习页面的模拟环境 URL 网页地址",
-      "enableLearnStagingUrlDesc" : "启用学习页面的模拟环境 URL 网址。"
+      "enableLearnStagingUrlDesc" : "启用学习页面的模拟环境 URL 网址。",
+      "openOnboardingAppInstallDebug" : "打开入门应用程序安装调试界面",
+      "openOnboardingAppInstallDebugDesc" : "打开一个界面，其中包含同步入门应用程序安装步骤中的组件"
     },
     "currencies" : {
       "selectPlaceholder" : "选择加密资产",
@@ -3942,6 +3979,10 @@
       "fullNode" : {
         "title" : "连接比特币完整节点",
         "desc" : "设置您的比特币完整节点，无需使用 Ledger 的浏览器即可进行同步和发送交易。"
+      },
+      "filterTokenOperationsZeroAmount" : {
+        "title" : "值为 0 时隐藏代币交易",
+        "desc" : "隐藏没有价值的代币交易可以防止一些针对以太坊（ETH）、多边形（Polygon）、币安智能链（BSC）和波场（Tron）等的潜在地址中毒攻击"
       }
     }
   },
@@ -5356,7 +5397,7 @@
       "description" : "必须在 30 秒内予以签署。请重试。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "能量低于必要值。您可能需要支付高达 50TRX 的费用。"
+      "title" : "能量低于必要值。您可能需要支付高达 50 TRX 的费用。"
     },
     "PairingFailed" : {
       "title" : "配对不成功",
@@ -5521,6 +5562,10 @@
       "title" : "从文件加载图片失败",
       "description" : "请使用另一张图片重试"
     },
+    "ImageLoadFromNftError" : {
+      "title" : "从 NFT 加载图片失败",
+      "description" : "请使用另一个 NFT 重试"
+    },
     "ImageDownloadError" : {
       "title" : "图片下载失败",
       "description" : "请使用另一张图片重试"
@@ -5593,6 +5638,13 @@
       "descriptionWithProductName" : "您需要先设置 {{ productName }}。\n我们将引导您完成设置流程。",
       "goToOnboardingButton" : "设置我的设备",
       "goToOnboardingButtonWithProductName" : "设置我的 {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "未能提取交易",
+      "description" : "浏览器出现意外错误。请重试"
+    },
+    "GasEstimationError" : {
+      "title" : "未能估计 Gas 费用"
     }
   },
   "cryptoOrg" : {
@@ -5631,7 +5683,13 @@
         "stepLabel" : "选择一张图片",
         "description" : "选择要设为 (...) 的图片",
         "pickFromNftGallery" : "从我的 NFT 画廊中选择",
-        "upload" : "从我的计算机上传"
+        "myNfts" : "我的 NFT",
+        "upload" : "从我的计算机上传",
+        "chooseNft" : "选择 NFT",
+        "selectNft" : "选择 NFT",
+        "previousSelectNft" : "返回",
+        "nftEmptyStateTitle" : "暂时没有 NFT 可显示",
+        "nftEmptyStateDescription" : "首先将 NFT 添加到您的钱包"
       },
       "adjust" : {
         "stepLabel" : "调整图片",
@@ -5657,5 +5715,37 @@
     },
     "customImageSet" : "锁屏已设置",
     "finishCTA" : "完成"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "是否安装与 {{deviceName}} 上相同的应用程序？",
+      "titleNoDeviceName" : "是否安装与上一台 Ledger 设备上相同的应用程序？",
+      "subtitle" : "您可以随时安装或删除应用程序。",
+      "installCTA" : "恢复应用程序",
+      "skipCTA" : "我以后再下载"
+    },
+    "default" : {
+      "title" : "{{ productName }} 使用应用程序完成安全的区块链交易",
+      "subtitle" : "我们建议下载一组默认应用程序。您以后可以下载更多。",
+      "installCTA" : "安装应用程序",
+      "skipCTA" : "我以后再下载"
+    },
+    "progress" : {
+      "loading" : "正在加载……",
+      "resolving" : "解决依赖关系",
+      "progress" : "正在安装应用程序 {{progress}}%",
+      "disclaimer" : "随时在 Ledger Live 中添加或删除应用程序。"
+    },
+    "cancelled" : {
+      "title" : "安装应用程序已在 {{productName}} 上被取消",
+      "subtitle" : "{{productName}} 需要区块链应用程序来批准您的加密货币和 NFT 交易。",
+      "installCTA" : "立即安装",
+      "skipCTA" : "我以后再下载"
+    },
+    "locked" : {
+      "title" : "您的 {{productName}} 已锁定",
+      "subtitle" : "请解锁您的 {{productName}} 并重新开始安装。",
+      "installCTA" : "重新开始安装"
+    }
   }
 }
